# abfv

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  mvp.ipynb  rust-toolchain.toml  rustfmt.toml
docker/: environment.docker.yml
examples/: heavy.fasta  light.fasta
notebooks/: README.org  mvp.org
src/: e2e.rs  inference.rs  main.rs  pdb.rs  preprocess.rs
workers/: export_onnx.py  predict.py  visualize.py
