[package]
name = "abfv"
version = "0.1.0"
edition = "2021"
description = "Antibody Fv VH-VL interface detection (wraps ABodyBuilder3 + FreeSASA)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "abfv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
# anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1"
# Add when the pipeline lands:
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# csv = "1.3"
# pdbtbx = "0.11"   # PDB parsing / chain splitting
# polars = { version = "0.43", features = ["lazy", "csv"] }  # df join/filter (pandas equiv. for the SASA table)

[profile.release]
lto = true
strip = true
